<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_frequency_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/details_contacts_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/calls_per_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:hint="@string/default_details_hint"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/details_contacts_toggle"
        app:layout_constraintRight_toLeftOf="@id/call_frequency"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="403dp" />

    <EditText
        android:id="@+id/call_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:hint="@string/default_details_hint"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/details_contacts_toggle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="468dp" />

    <RadioGroup
        android:id="@+id/periods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/details_contacts_toggle"
        app:layout_constraintLeft_toRightOf="@id/call_frequency"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="520dp">

        <RadioButton
            android:id="@+id/period_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_day"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="513dp" />

        <RadioButton
            android:id="@+id/period_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_week"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="513dp" />

        <RadioButton
            android:id="@+id/period_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_Month"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="545dp" />

        <RadioButton
            android:id="@+id/period_quarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_Quarter"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="545dp" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>